frontend/test/should_fail/alternative_008.grg
test alttest
{
    alternative
    {
        alt1
        {
            if { x == y; }  // x and y are undeclared
        }
        alt2
        {
            x:Node;
        }
    }
}
